--- a/prop-tree-server/build.gradle
+++ b/prop-tree-server/build.gradle
@@ -37,6 +37,7 @@ jar.dependsOn ':prop-tree-client:buildClientToSpring'
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.projectlombok:lombok:1.16.14')
 //	runtime('mysql:mysql-connector-java:5.1.40')
 	runtime('com.h2database:h2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
