--- a/prop-tree-server/build.gradle
+++ b/prop-tree-server/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
 group = 'com.unamanic'
-version = '0.9.1-SNAPSHOT'
+version = '0.9.1'
 sourceCompatibility = 1.8
 
 repositories {
