--- a/prop-tree-client/package.json
+++ b/prop-tree-client/package.json
@@ -15,18 +15,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.3",
+    "@angular/animations": "^5.2.4",
     "@angular/cdk": "^5.2.0",
-    "@angular/common": "^5.2.3",
-    "@angular/compiler": "^5.2.3",
-    "@angular/core": "^5.2.3",
+    "@angular/common": "^5.2.4",
+    "@angular/compiler": "^5.2.4",
+    "@angular/core": "^5.2.4",
     "@angular/flex-layout": "2.0.0-beta.10-4905443",
-    "@angular/forms": "^5.2.3",
-    "@angular/http": "^5.2.3",
+    "@angular/forms": "^5.2.4",
+    "@angular/http": "^5.2.4",
     "@angular/material": "^5.2.0",
-    "@angular/platform-browser": "^5.2.3",
-    "@angular/platform-browser-dynamic": "^5.2.3",
-    "@angular/router": "^5.2.3",
+    "@angular/platform-browser": "^5.2.4",
+    "@angular/platform-browser-dynamic": "^5.2.4",
+    "@angular/router": "^5.2.4",
     "angular2-csv": "^0.2.5",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
@@ -37,11 +37,11 @@
   },
   "devDependencies": {
     "@angular/cli": "1.6.6",
-    "@angular/compiler-cli": "^5.2.3",
-    "@angular/language-service": "^5.2.3",
+    "@angular/compiler-cli": "^5.2.4",
+    "@angular/language-service": "^5.2.4",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.100",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
